--- a/src/components-css/Modal.css
+++ b/src/components-css/Modal.css
@@ -1,4 +1,3 @@
-
 .modal-overlay {
     position: fixed;
     top: 0;
@@ -10,19 +9,23 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
-}
+    overflow: auto;
+    }
 
 .modal-content {
     background-color: #212121;
     padding: 20px;
     border-radius: 5px;
-    width: 40%;
-    height: auto;
+    width: 90vw;
+    max-width: 700px;
+    max-height: 90vh;
+    overflow-y: auto;
     box-shadow: 0px 0px 5px 5px gold;
     position: relative;
     color: gold;
     font-size: 1.5vh;
-}
+    box-sizing: border-box;
+    }
 
 .modal-close {
     position: absolute;
@@ -31,18 +34,16 @@
     border: none;
     font-size: 1.5rem;
     cursor: pointer;
-}
+    background: transparent;
+    color: gold;
+    }
 
 @media only screen and (max-width: 600px) {
 .modal-content {
-    background-color: #212121;
-    padding: 20px;
-    border-radius: 5px;
-    width: 80%;
-    height: 60%;
-    box-shadow: 0px 0px 5px 5px gold;
-    position: relative;
-    color: gold;
-    font-size: 5vw;
+        width: 90vw;
+        height: auto;
+        max-height: 90vh;
+        font-size: 4vw;
+        padding: 15px;
     }
-}
+    }
